--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     
     <!-- Service Worker Registration -->
     <script>
