--- a/index.html
+++ b/index.html
@@ -701,6 +701,25 @@
             
             console.log('DNYF TETCH website initialized');
         });
-    </script>
+
+<!-- Admin Access Link (Hidden by default) -->
+<a href="admin.html" id="adminLink" style="display: none; position: fixed; bottom: 10px; right: 10px; 
+    background: #667eea; color: white; padding: 5px 10px; border-radius: 5px;
+    text-decoration: none; font-size: 12px; z-index: 9999;">Admin</a>
+
+<script>
+    // Show admin link when pressing Ctrl+Shift+A
+    document.addEventListener('keydown', function(e) {
+        if (e.ctrlKey && e.shiftKey && e.key === 'A') {
+            const adminLink = document.getElementById('adminLink');
+            adminLink.style.display = 'block';
+            
+            // Hide after 10 seconds
+            setTimeout(() => {
+                adminLink.style.display = 'none';
+            }, 10000);
+        }
+    });
+</script>
 </body>
 </html>
